--- a/style.css
+++ b/style.css
@@ -5,47 +5,101 @@ body{
 }
 
 .contaner{
-    background-color: antiquewhite;
     display: flex;
-    /* flex-direction: column;
-    height: 100%; */
+    flex-direction: column;
     width: 500px;
+    height: 100%;
     height: 800px;
+    border-radius: 30px 30px 0px 0px;
+    background-color: antiquewhite;
 }
 
 .input-box{
-    background-color: black;
-    width: 300px;
-    height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100px;
+    border-radius: 30px 30px 0px 30px;
+    background-color: #3B3732;
 }
 
 .to-do-input{
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
+    width: 350px;
+    height: 70px;
+    padding-left: 30px;
+    border: none;
+    border-radius: 30px;
+    font-size: 20px;
     
 }
 
 .to-do-btn{
-    background-color: blueviolet;
-}
-
-.list-box{
-    background-color: aqua;
+    /* background-color: blueviolet; */
+    width: 100px;
+    height: 75px;
+    border-radius: 50px;
 }
 
 .listContainer{
-    background-color: red;
+    height: inherit;
+    /* background-color: greenyellow; */
+    margin: 10px;
+    border-radius: 30px 30px 0px 30px;
+    background-color: #FFFBF5;
+    box-shadow: 5px 3px rgba(0, 0,0,0.4);
 }
 
 .to-do-li{
-    background-color: aquamarine;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: auto;
+    height: 50px;
+    padding-left: 20px;
     margin: 10px;
+    border-radius: 30px;
+    background-color: rgba(0, 0,0,0.4);
+    color: white;
+    font-size: 30px;
+
+    
 }
 
-.to-do-li > span{
-    background-color: white;
+.checked{
+    background-color: #3B3732;
+}
+
+.checked::after{
+    content: "";
+  display: block;
+  border-top: 5px solid black; /* 원하는 줄 스타일 및 색상을 설정하세요 */
+  width: 20%;
+  margin-top: 5px; /* 줄과 텍스트 간격을 조절합니다. */
+  position: absolute;
+}
+
+ul li.checked::before{
+  position: absolute;
+  top: 10px;
+  left: 16px;
+  width: 7px;
+  height: 15px;
+    content: '';
+  border-color: #fff;
+  border-style: solid;
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
+}
+
+.to-do-li text{
+    background-color: aliceblue;
+}
+
+.to-do-li span{
+    margin-right: 30px;
+    /* background-color: white; */
+    color: aliceblue;
 }
 
 
