--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
     height: 100%;
     height: 800px;
     border-radius: 30px 30px 0px 0px;
-    background-color: antiquewhite;
+    background-color: #FDDACD;
 }
 
 .input-box{
@@ -24,21 +24,23 @@ body{
 }
 
 .to-do-input{
-    /* background-color: aquamarine; */
     width: 350px;
     height: 70px;
     padding-left: 30px;
+    margin-right: 0px;
     border: none;
-    border-radius: 30px;
+    border-radius: 30px 0px 0px 30px;
     font-size: 20px;
     
 }
 
 .to-do-btn{
-    /* background-color: blueviolet; */
+    /* background-color: #FAF6E1; */
     width: 100px;
-    height: 75px;
-    border-radius: 50px;
+    height: 72px;
+    border: none;
+    border-radius: 0px 50px 50px 0px;
+    font-size: 25px;
 }
 
 .listContainer{
@@ -54,6 +56,7 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
     width: auto;
     height: 50px;
     padding-left: 20px;
@@ -62,46 +65,23 @@ body{
     background-color: rgba(0, 0,0,0.4);
     color: white;
     font-size: 30px;
-
-    
+    cursor: pointer;
 }
 
-.checked{
+.to-do-li:hover{
+    background-color:#E6B18C;
+    color: #FFEEE6;
+}
+
+.checked {
     background-color: #3B3732;
+    text-decoration: line-through; /* 체크된 항목에 줄 추가 */
 }
 
-.checked::after{
-    content: "";
-  display: block;
-  border-top: 5px solid black; /* 원하는 줄 스타일 및 색상을 설정하세요 */
-  width: 20%;
-  margin-top: 5px; /* 줄과 텍스트 간격을 조절합니다. */
-  position: absolute;
+.del{
+    position: absolute;
+    margin-right: 20px; 
+    right: 0;
+    top: 0;
+    padding: 7px 0px 7px 0px;
 }
-
-ul li.checked::before{
-  position: absolute;
-  top: 10px;
-  left: 16px;
-  width: 7px;
-  height: 15px;
-    content: '';
-  border-color: #fff;
-  border-style: solid;
-  border-width: 0 2px 2px 0;
-  transform: rotate(45deg);
-}
-
-.to-do-li text{
-    background-color: aliceblue;
-}
-
-.to-do-li span{
-    margin-right: 30px;
-    /* background-color: white; */
-    color: aliceblue;
-}
-
-
-
-
