--- a/style.css
+++ b/style.css
@@ -29,9 +29,9 @@ body{
     padding-left: 30px;
     margin-right: 0px;
     border: none;
-    border-radius: 30px 0px 0px 30px;
+    border-radius: 60px 0px 0px 60px;
     font-size: 20px;
-    
+    outline: none;
 }
 
 .to-do-btn{
