--- a/CSS/style.css
+++ b/CSS/style.css
@@ -61,6 +61,7 @@ body{
     height: 50px;
     padding-left: 20px;
     margin: 10px;
+    margin-right: 30px;
     border-radius: 30px;
     background-color: rgba(0, 0,0,0.4);
     color: white;
